--- a/azure-files-aks/storage-class.yaml
+++ b/azure-files-aks/storage-class.yaml
@@ -1,5 +1,5 @@
 apiVersion: storage.k8s.io/v1
-kind: storageClass
+kind: StorageClass
 metadata:
   name: my-azurefile-sc
 provisioner: kubernetes.io/azure-file
