--- a/azure-files-aks/persistentvloumeclaim.yaml
+++ b/azure-files-aks/persistentvloumeclaim.yaml
@@ -9,3 +9,24 @@ spec:
   resources:
     requests:
       storage: 5Gi
+
+
+
+az network public-ip create --resource-group MC_aks-shubh_aksdemo1_eastus \
+                            --name myAKSPublicIPForIngress \
+                            --sku Standard \
+                            --allocation-method static \
+                            --query publicIp.ipAddress \
+                            -o tsv
+
+
+                            52.188.1.95
+
+
+helm install ingress-nginx ingress-nginx/ingress-nginx \
+    --namespace ingress-basic \
+    --set controller.replicaCount=2 \
+    --set controller.nodeSelector."kubernetes\.io/os"=linux \
+    --set defaultBackend.nodeSelector."kubernetes\.io/os"=linux \
+    --set controller.service.externalTrafficPolicy=Local \
+    --set controller.service.loadBalancerIP="52.188.1.95"   
