--- a/ingresspathbased/secretsapps/usermgmt-loadbalancer.yaml
+++ b/ingresspathbased/secretsapps/usermgmt-loadbalancer.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: usermgmt-webapp
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: usermgmt-webapp
   ports:
-    - port: 8080
+    - port: 80
       targetPort: 8080
