--- a/ingresspathbased/ingress.yaml
+++ b/ingresspathbased/ingress.yaml
@@ -5,11 +5,6 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx  
 spec:
-  defaultBackend:
-    service:
-      name: usermgmt-webapp-service
-      port:
-        number: 80
   rules:
     - http:
         paths:
@@ -27,10 +22,10 @@ spec:
                 name: app2-nginx-clusterip-service
                 port: 
                   number: 80
-          # - path: /
-          #   pathType: Prefix
-          #   backend:
-          #     service:
-          #       name: usermgmt-webapp-service
-          #       port: 
-          #         number: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: usermgmt-webapp-service
+                port: 
+                  number: 80
