--- a/externalazuredns/ingress.yaml
+++ b/externalazuredns/ingress.yaml
@@ -10,9 +10,9 @@ spec:
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
               service:
                 name: app1-nginx-clusterip-service
                 port: 
                   number: 8080
-        
