--- a/externalazuredns/ingress.yaml
+++ b/externalazuredns/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress-cpr
   annotations:
-    kubernetes.io/ingress.class: nginx  
+    kubernetes.io/ingress.class: "nginx"  
 spec:
   rules:
     - host: app1.frozenbread.online
@@ -15,4 +15,4 @@ spec:
               service:
                 name: app1-nginx-clusterip-service
                 port: 
-                  number: 8080
+                  number: 80
